# FastAPI-template

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  migration.Dockerfile  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 2025_04_13_0400-ce7efb557132_initial_migration.py  2025_04_27_0439-0f23142d7430_init.py
apps/api/src/: main.py
apps/api/src/core/: config.py  database_session.py
apps/api/src/core/security/: jwt.py  password.py
apps/api/src/endpoints/: dependencies.py
apps/api/src/endpoints/auth/: endpoints.py  models.py
apps/api/src/endpoints/chat/: endpoints.py  events.py  models.py  responses.py
apps/api/src/endpoints/user/: endpoints.py  models.py
apps/faker/src/: generator.py  main.py
apps/faker/src/core/: config.py  database_session.py
domain/: domain_errors.py
domain/handlers/auth/: auth_errors.py  login_user.py  refresh_token.py  register.py
domain/handlers/chat/: chat_errors.py  get_chat_history.py
domain/handlers/user/: get_user.py  user_errors.py
domain/repositories/: base.py  chat.py  group.py  messages.py  refresh_token.py  user.py
