[project]
name = "realtime-chat-app"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

alembic = "^1.15.2"
asyncpg = "^0.30.0"
fastapi = "^0.115.12"
pydantic = { extras = ["dotenv", "email"], version = "^2.11.3" }
pydantic-settings = "^2.8.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.40" }
websockets = "15.0.1"
faker = "^37.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
coverage = "^7.8.0"
freezegun = "^1.5.1"
greenlet = "^3.1.1"
httpx = "^0.28.1"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
pytest-xdist = "^3.6.1"
ruff = "^0.11.5"
uvicorn = { extras = ["standard"], version = "^0.34.0" }

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "UP", "W"]
